Update: added stringify method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
         "esModuleInterop": true,
         "module": "CommonJS",
         "allowJs": true,
+        "removeComments": true,
+        "incremental": true,
         "allowSyntheticDefaultImports": true
     }
 }
