--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
         "target": "ES6",
         "moduleResolution": "node",
         "esModuleInterop": true,
@@ -8,6 +7,8 @@
         "allowJs": true,
         "removeComments": true,
         "incremental": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "outDir": "./dist",
+        "declaration": true
     }
 }
