Fixed compilation anomalies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
         "incremental": true,
         "allowSyntheticDefaultImports": true,
         "outDir": "./dist",
-        "declaration": true
-    }
+        "declaration": true,
+    },
+    "exclude": [
+        "./test/**",
+        "./dist/**"
+    ]
 }
