--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "lib": [
+            "ES2017"
+        ],
         "moduleResolution": "node",
         "esModuleInterop": true,
         "module": "CommonJS",
